fix: add pre-wrap for code tag

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -64,4 +64,7 @@ h2 {
   .my-skills div {
     padding-bottom: 50px; }
 
+code {
+  white-space: pre-wrap; }
+
 /*# sourceMappingURL=style.css.map */
