--- a/styles/scss/style-desktop.scss
+++ b/styles/scss/style-desktop.scss
@@ -105,4 +105,8 @@ h2{
     padding-bottom: 50px;
   }
 }
+
+code{
+  white-space: pre-wrap;
+}
 // end main content
